--- a/founding-members.html
+++ b/founding-members.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make your own website for free</a></section><section class="mbr-section content5 cid-rPOIP6Bu0Q mbr-parallax-background" id="content5-36">
+<section class="engine"><a href="https://mobirise.info/y">html web templates</a></section><section class="mbr-section content5 cid-rPOIP6Bu0Q mbr-parallax-background" id="content5-36">
 
     
 
@@ -262,7 +262,7 @@
                         Flight Connect</h2>
                     <div class="mbr-section-text">
                         <p class="mbr-text mb-5 pt-3 mbr-light mbr-fonts-style display-7">
-                        Boost you client relationship and marketing management efforts with the addition of me as your ultimate team member in your morning or afternoon tee-time flight. A unique experience they will never forget!<br><br>During our 9 or 18-holes private session round I will introduce your business partners to the wonderful world of playing golf at a tour professional level, share key insightful tips &amp; tricks to improve their golf swing and take them on a journey of continuous decision making while maintaining a razor-sharp focus.<br><br>Recognizing and understanding the striking similarities between playing a round of competitive tournament golf under tremendous pressure and dealing with high profile business decisions in their daily corporate lives, will be one of the main take-aways, apart from having a lot of fun.&nbsp;<br></p>
+                        Boost you client relationship and marketing management efforts with the addition of me as your ultimate team member to your morning or afternoon tee-time flight. A unique experience where the striking similarities between playing a round of competitive tournament golf under tremendous pressure and dealing with high profile business decisions in daily corporate lives, will be one of the main take-aways.<br><br>During practicing and playing&nbsp;a 9 or 18-holes round private session I will introduce your business partners to the wonderful world of playing golf at a tour professional level and share key insightful tips &amp; tricks to improve their golf swing. I will take them on a journey of continuous decision making while maintaining a razor-sharp focus&nbsp;and strengthen business relationships in the process.<br></p>
                     </div>
 
                     
@@ -400,7 +400,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="1v++SnSfr6PWJQLxL8KCmZ380+GaSVUjXTz4FLgGQTQ7VOF48bU9oVLxD1a9wz9Rb+h7AcE78nReV8ioLT+oE8Bn0hJv6aHUKzUQqjthu2M25z1SHXZH7BMPeNypnCNT">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="okmMpHPBakRBu68cZXMaTSlvk/5i2zQU1nQCr3bmv4c2hnYT/3f0cyxfuxTtTDlMTxk1iosAV9i260/iaFXZ4BKP8BjZ6xjve4l8E1IRSubMIMQDlIZkMrlW8s60BHQU">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thank you for your interest. I will be in touch with you soon!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
