--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create a website</a></section><section class="timeline1 cid-rFznVGDtsu mbr-parallax-background" id="timeline1-1f">
+<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="timeline1 cid-rFznVGDtsu mbr-parallax-background" id="timeline1-1f">
 
     
 
@@ -336,7 +336,7 @@
             </div>
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                    © Copyright 2019 - 2020 Sven Maurits - All Rights Reserved<br><br><br><br><br><br>
+                    © Copyright 2020 Sven Maurits - All Rights Reserved<br><br><br><br><br><br>
                 </p>
             </div>
         </div>
