--- a/page7.html
+++ b/page7.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio site templates</a></section><section class="header1 cid-rPtSX7YpAG" id="header1-2g">
+<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="header1 cid-rPtSX7YpAG" id="header1-2g">
 
     
 
@@ -470,7 +470,7 @@
             </div>
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                    © Copyright 2019 - 2020 Sven Maurits - All Rights Reserved<br><br><br><br><br><br>
+                    © Copyright 2020 Sven Maurits - All Rights Reserved<br><br><br><br><br><br>
                 </p>
             </div>
         </div>
