--- a/schedule.html
+++ b/schedule.html
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="header1 cid-rN7ytXRDy5" id="header1-27">
+<section class="engine"><a href="https://mobirise.info/m">free website design templates</a></section><section class="header1 cid-rN7ytXRDy5" id="header1-27">
 
     
 
@@ -371,7 +371,7 @@
             </div>
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                    © Copyright 2019 - 2020 Sven Maurits - All Rights Reserved<br><br><br><br><br><br>
+                    © Copyright 2020 Sven Maurits - All Rights Reserved<br><br><br><br><br><br>
                 </p>
             </div>
         </div>
