--- a/founding-members.html
+++ b/founding-members.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="mbr-section content5 cid-rPOIP6Bu0Q mbr-parallax-background" id="content5-36">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="mbr-section content5 cid-rPOIP6Bu0Q mbr-parallax-background" id="content5-36">
 
     
 
@@ -317,7 +317,7 @@
                         Charity Chip-in</h2>
                     <div class="mbr-section-text">
                         <p class="mbr-text mb-5 pt-3 mbr-light mbr-fonts-style display-7">
-                        Golf is a game of ups and downs. It's almost like life itself. Sven envisions sharing his success with people less fortunate. As a Founding Member you allow Sven to share 5% of his prize money with a charity of your choice. 
+                        Golf is a game of ups and downs. It's almost like life itself. I envisioned sharing my success with people less fortunate. As a Founding Member you allow me to share 5% of my prize money with a charity of your choice. 
                         </p>
                     </div>
 
@@ -362,7 +362,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="mfOKOeatmEBcY7dW3vh/ce8LhGkbeSwf8SwCpbnOqY+0Zp5/nR+F2g354bj17NmXmQkk2+DcjZzRai1Dfji16/155Aq4EPOcjBqAsoqZx4EUOOyloglaclj/NvuWKF6J">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="FZtvTbQYmsmX8ei2V4Ewv76ioIFcShA49OfCsuWiCWJz80leGTMBm6dWTrwCvY1vEWkx7IqmqYahVkbdHPtmCebqyuM1oeVVyHLRtqCNuMu0aRsL8lcqF0Yw+1GFw/d5">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thank you for your interest. I will be in touch with you soon!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
